Fix overflow of command and code_command blocks

--- a/src/main/content/_assets/css/guide-multipane.css
+++ b/src/main/content/_assets/css/guide-multipane.css
@@ -144,6 +144,11 @@ header {
     border-left: 8px solid #96bc32;
     border-radius: 3px;    
     overflow: hidden;
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;  
 }
 
 #guide_content .command code {
@@ -154,6 +159,11 @@ header {
     background-color: #F1F4FE;
     margin-bottom: 0;
     overflow: hidden;
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;      
 }
 
 /* Create pointed div using pseudo elements */
